--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>FNWA Energy — Dashboard Portal</title>
+  <title>Kiryan Energy Ltd — Dashboard Portal</title>
   <style>
     body { font-family: Arial, sans-serif; background: #f4f4f4; text-align: center; padding: 50px; }
     h1 { color: #222; }
