--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Kiryan Energy Ltd — Mangu Shell Dashboards</title>
+  <title>Kiryan Energy Ltd — Mangu Shell SS Dashboards</title>
   <style>
     body { 
       font-family: Arial, sans-serif; 
